# mdsplus

./: .gitignore  0_XMW_README.md  CMakeLists.txt  Jenkinsfile  bootstrap  configure.ac
cmake/: MDSplusAddTest.cmake  MDSplusCheckFlags.cmake  MDSplusGetAllTargets.cmake
deploy/: build.py  gen-include-opcbuiltins.py  gen-include-tdishr.py  gen-messages-exceptions.py  gen-python-MDSplus-compound.py  gen-tdishr-TdiHash.py  gen-yacc-lex.py
deploy/os/: rhel-8-x86_64.opts  rhel-9-x86_64.opts  ubuntu-20.opts  ubuntu-24.opts  ubuntu-bionic.opts  ubuntu-jammy.opts  windows-win32.opts  windows-win64.opts  windows.opts
deploy/packaging/: linux_build_packages.py
examples/demoadc/: DemoAdc.c
hdf5/: CMakeLists.txt
include/mdsplus/: mdsconfig.h.in
java/devicebeans/: CMakeLists.txt
java/jdevices/: CMakeLists.txt
math/: CMakeLists.txt
math/testing/: CMakeLists.txt
mdsdcl/: CMakeLists.txt  mdsdcl.c
mdslib/: fortran_aliases_mac.h
mdslib/testing/: CMakeLists.txt
mdsobjects/cpp/: mdsipobjects.cpp
mdsobjects/labview/: CMakeLists.txt
mdsshr/: MdsThreadStatic.c
mdsshr/testing/: CMakeLists.txt
mdstcpip/: CMakeLists.txt  mdsip_connections.h
mdstcpip/io_routines/: ioroutinesx.h
mdstcpip/mdsipshr/: Connections.c  GetSetSettings.c  mdsipthreadstatic.h
mdstcpip/testing/: CMakeLists.txt
mitdevices/: CMakeLists.txt
rpm/: mdsip@.service  python_module_remove.sh
servershr/: Client.h  ServerQAction.c  ServerSendMessage.c
tcl/: tcl_directory.c  tcl_dispatch.c
tdishr/: TdiConvert.c
treeshr/: TreeFindNodeWild.l  TreeGetNci.c  TreeOpen.c  TreeSetNci.c
(+19 files in other folders)
